src/objects/VRTN__c.object
<CustomObject>
    <fields>
        <fullName>AuOpps__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AU Opps</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUAccts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EUAccounts</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUOpps__c</fullName>
        <description>EU Opportunity Record Types</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EUOpps</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUServiceCases__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EU Service Cases</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EuProjects__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EU Projects</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAEUAccts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAEUAccounts</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAEUContacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAEUContacts</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAEUOpps__c</fullName>
        <description>All NA &amp; EU record types</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NAEUOpps</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAEUProjs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAEUProjs</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAOpps__c</fullName>
        <description>NA Opportunity Record Types</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NAOpps</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaProjects__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NA Projects</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Partner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Virtual Partner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Opportunity_Setting_Overview</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>AuOpps__c</columns>
        <columns>EUOpps__c</columns>
        <columns>NAOpps__c</columns>
        <columns>NAEUOpps__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Opportunity Setting Overview</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Other_Objects_Setting_Overview</fullName>
        <columns>NAME</columns>
        <columns>EUAccts__c</columns>
        <columns>EuProjects__c</columns>
        <columns>EUServiceCases__c</columns>
        <columns>NaProjects__c</columns>
        <columns>NAEUAccts__c</columns>
        <columns>NAEUContacts__c</columns>
        <columns>NAEUProjs__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Other Objects Setting Overview</label>
        <language>en_US</language>
    </listViews>
</CustomObject>